cloud-auth-deployments/mtls.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "default"
  namespace: incorta-x-demo
spec:
  mtls:
    mode: STRICT
