cloud-auth-deployments/front-api-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-api
  namespace: incorta-x-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-api
  template:
    metadata:
      labels:
        app: front-api
    spec:
      containers:
        - name: front-api
          image: us.gcr.io/incorta-cloud-dev/incorta-x-demo/front-api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "1G"
              cpu: "1"
