cloud-auth-deployments/micro-a-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: compute-service
  namespace: incorta-x-demo
spec:
  serviceName: compute-service-svc
  replicas: 3
  selector:
    matchLabels:
      app: micro-a
  template:
    metadata:
      labels:
        app: micro-a
    spec:
      containers:
        - name: compute-service
          image: us.gcr.io/incorta-cloud-dev/incorta-x-demo/micro-a:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
