cloud-auth-deployments/front-api-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: front-api-svc
  namespace: incorta-x-demo
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: front-api
