cloud-auth-deployments/micro-a-hdls-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: compute-service-svc
  namespace: incorta-x-demo
spec:
  clusterIP: None
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: micro-a
