cloud-auth-deployments/micro-b-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: audit-service-svc
  namespace: incorta-x-demo
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: micro-b
